--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
-    <string name="app_name">hw2</string>
+    <string name="app_name">Bmi</string>
+    <string name="height">Height</string>
+    <string name="height_hint">please input Height (m)</string>
+    <string name="weight">Weight</string>
+    <string name="weight_hint">please input weight (kg)</string>
+    <string name="calculate">CALCULATE BMI</string>
+    <string name="error_title">Warning</string>
+    <string name="bmi_unit">kg/㎡</string>
+    <string name="ok">OK</string>
+    <string name="please_enter_your_height_and_weight">Please enter your height and weight</string>
+    <string name="please_enter_your_height">Please enter your height</string>
+    <string name="please_enter_your_weight">Please enter your weight</string>
+    <string name="underweight">Underweight</string>
+    <string name="healthy">Healthy</string>
+    <string name="overweight">Overweight</string>
+    <string name="obese">Obese</string>
+    <string name="extremely_obese">Extremely Obese</string>
+    <string name="empty" translatable="false" />
 </resources>
